--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,30 +4,27 @@
     box-sizing: border-box;
 }
 
-
 body {
     font-family: sans-serif;
     background-color: rgb(238, 236, 236);
     justify-content: center;
     align-items: center;
-    display: flex;
+    display: grid;
     min-height: 100vh;
 }
 
-.container {
+.wrapper {
     background-color: rgb(255, 254, 254);
     padding: 20px 40px;
     max-width: 800%;
-    box-shadow: 0px 2px 10px gray;
-    font-size:20px ;    
+    box-shadow: 0px 2px 10px gray;   
 }
 
-header {
+header  {
     text-align: center;
-    padding: 15px;
+    padding: 10px;
     padding-top: 0px;
 }
-
 
 #password {
     padding-top: 20px;
@@ -54,7 +51,7 @@ button{
     width: 320px;
     height: 45px;
     background-color: rgb(204, 72, 72);
-    display: flex;
+    display: inline-block;
     color: white;
     justify-content: center;
     align-items: center;
